# dawg

./: .gitignnore  .gitignore  Cargo.toml  README.md  init.sql  sqlx-data.json
examples/: dawgie.rs
migrations/: 20230625095412_node.down.sql  20230625095412_node.up.sql  20230625095427_node_edge.down.sql  20230625095427_node_edge.up.sql
src/: database.rs  dawg.rs  lib.rs  main.rs  node.rs  repository.rs  sample_words.txt  settings.rs
src/dawg/: dawg.rs  dawg.test.rs  search.rs  sqlx_dawg.rs  tridawg.rs
src/node/: node.rs  node.test.rs  sqlx_node.rs
