[package]
name = "dawg"
version = "0.0.2"
edition = "2021"
authors = ["Tolumide Shopein <tolumideshopein@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Directed Acyclic Word Graph"
keywords = ["dawg", "trie"]
publish = true


[features]
threading = []

[dependencies]
serde = { version = "1.0.193", features = ["derive", "rc"] }