[package]
name = "dawg"
version = "0.0.7"
edition = "2021"
authors = ["Tolumide Shopein <tolumideshopein@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Directed Acyclic Word Graph"
keywords = ["dawg", "trie"]
publish = true
repository = "https://github.com/tolumide-ng/dawg"
exclude = [
    "src/sample_words.txt"
]


[features]
threading = []

[dependencies]
serde = { version = "1.0.193", features = ["derive", "rc"] }
unicode-segmentation = "1.10.1"